--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -7,15 +7,16 @@ trigger:
 - main
 
 pool:
-  vmImage: ubuntu-latest
+  name: lastpool
+
 
 steps:
 - task: Maven@3
   inputs:
     mavenPomFile: 'pom.xml'
     mavenOptions: '-Xmx3072m'
-    javaHomeOption: 'JDKVersion'
-    jdkVersionOption: '1.11'
+    javaHomeOption: 'Path'
+    jdkDirectory: 'C:\Program Files\Java\jdk-21'
     jdkArchitectureOption: 'x64'
     publishJUnitResults: true
     testResultsFiles: '**/surefire-reports/TEST-*.xml'
